testdata/golden/sema/valid/raw_pointers/intrinsic_ptr.sg
@intrinsic
fn rt_alloc(n: uint) -> *byte;

fn main() -> int {
    return 0;
}
