testdata/golden/sema/invalid/hidden_pub/only.sg
pragma module;

@hidden
pub fn foo() -> int {
    return 0;
}
